Fix functionality for reading all lastnames